apps/arcs/arc-chi/netpol/chi-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"cilium.io/v2","kind":"CiliumNetworkPolicy","metadata":{"annotations":{},"name":"chi-ingress","namespace":"arc-chi"},"spec":{"endpointSelector":{"matchLabels":{"k8s:app":"chi-bus"}},"ingress":[{"fromEndpoints":[{"matchLabels":{"k8s:app":"phi","k8s:io.kubernetes.pod.namespace":"arc-phi","k8s:role":"cortex"}},{"matchLabels":{"k8s:app":"lambda","k8s:io.kubernetes.pod.namespace":"arc-lambda","k8s:role":"worker"}}],"toPorts":[{"ports":[{"port":"7422","protocol":"TCP"}]}]},{"fromEn [...]
  creationTimestamp: "2025-10-31T20:02:34Z"
  generation: 1
  name: chi-ingress
  namespace: arc-chi
  resourceVersion: "6359515"
  uid: f9b34ee5-0a04-4bd2-afbc-36dadbc033f2
spec:
  endpointSelector:
    matchLabels:
      k8s:app: chi-bus
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:app: phi
        k8s:io.kubernetes.pod.namespace: arc-phi
        k8s:role: cortex
    - matchLabels:
        k8s:app: lambda
        k8s:io.kubernetes.pod.namespace: arc-lambda
        k8s:role: worker
    toPorts:
    - ports:
      - port: "7422"
        protocol: TCP
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "8222"
        protocol: TCP
status:
  conditions:
  - lastTransitionTime: "2025-10-31T20:02:34Z"
    message: Policy validation succeeded
    status: "True"
    type: Valid
